--- a/estilos/style.css
+++ b/estilos/style.css
@@ -56,3 +56,16 @@ section#login > div#imagem{
     display: block;
     padding: 10px;
 }
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > h1{
+    font-size: 2em;
+}
+
+div#formulario > p {
+    font-size: 0.8em;
+}
