--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,7 +31,6 @@ section#login{
     top:50%;
     left:50%;
 
-    transform: translate(-50%, -50%);
 
     background-color: white;
     width: 250px;
@@ -42,6 +41,7 @@ section#login{
 
     transition: width .3s, height .3s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 section#login > div#imagem{
@@ -75,12 +75,37 @@ form > div.campo {
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
+    border: 2px solid #5f2c82;
 }
 
 div.campo > label{
     display: none;
+}
+
+div.campo > span {
+    color: white;
+    
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+    border: 0px;
+}
+
+div.campo > input {
+    background-color: #5bc4be;
+    font-size: 1em;
+    width:calc(100% - 44.4px) ;
+    height: 100%;
+    border-radius: 8px;
+    border: 0px;
+    padding: 5px;
+    transform: translateY(-12px);
+}
+
+div.campo > input:focus-within{
+    background-color: white;
 }
 
 form > input[type=submit] {
